--- a/history.html
+++ b/history.html
@@ -17,6 +17,9 @@
     <main>
         <section id="history">
             <h2>Historische Data</h2>
+            <button id="export-btn">Exporteer Data</button>
+            <button id="import-btn">Importeer Data</button>
+            <input type="file" id="import-file" accept=".json" style="display: none;">
             <table id="history-table">
                 <thead>
                     <tr>
