--- a/history.html
+++ b/history.html
@@ -20,6 +20,7 @@
             <button id="export-btn">Exporteer Data</button>
             <button id="import-btn">Importeer Data</button>
             <input type="file" id="import-file" accept=".json" style="display: none;">
+            <div class="table-container">
             <table id="history-table">
                 <thead>
                     <tr>
@@ -33,6 +34,7 @@
                 </thead>
                 <tbody id="history-body"></tbody>
             </table>
+            </div>
         </section>
     </main>
 
