--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         </section>
         <section id="current-week-overview">
             <h2>Huidige week</h2>
+            <div class="table-container">
             <table id="current-week-results">
                 <thead>
                     <tr>
@@ -57,6 +58,7 @@
                 </thead>
                 <tbody id="current-week-results-body"></tbody>
             </table>
+            </div>
             <div class="progress-container">
                 <div id="progress-fill" class="progress-fill"></div>
                 <span id="progress-text" class="progress-text"></span>
