--- a/weekoverview.html
+++ b/weekoverview.html
@@ -23,6 +23,7 @@
                     <span id="progress-text"></span>
                 </div>
             </div>
+            <div class="table-container">
             <table id="week-results">
                 <thead>
                     <tr>
@@ -39,6 +40,7 @@
                 </thead>
                 <tbody id="week-results-body"></tbody>
             </table>
+            </div>
         </section>
     </main>
     <script src="script.js"></script>
